@@ -26,7 +26,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>..\bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;NEWDIRECTORYCOLLECTION</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <FileAlignment>4096</FileAlignment>
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>..\bin\Release\</OutputPath>
-    <DefineConstants>TRACE;NEWDIRECTORYCOLLECTION</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <FileAlignment>4096</FileAlignment>
@@ -108,7 +108,6 @@
     <Compile Include="Options\ReferenceTypeOption.cs" />
     <Compile Include="Options\ValueTypeOption.cs" />
     <Compile Include="OSUtilities.cs" />
-    <Compile Include="PackageAndDirectoryPath.cs" />
     <Compile Include="PackageDefinitionFile.cs" />
     <Compile Include="PackageIdentifier.cs" />
     <Compile Include="PackageIdentifierCollection.cs" />
